objects/ObjectInfo__c.object
<CustomObject>
    <description>Holds info on an object for the AnalysisInfo object</description>
    <fields>
        <fullName>Number_of_Records__c</fullName>
        <label>Number of Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_AnalysisInfo__c</fullName>
        <label>Parent AnalysisInfo</label>
        <referenceTo>AnalysisInfo__c</referenceTo>
        <relationshipLabel>ObjectInfo</relationshipLabel>
        <relationshipName>ObjectInfo</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Query__c</fullName>
        <label>Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isFinished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isFinished</label>
        <type>Checkbox</type>
    </fields>
    <label>ObjectInfo</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ObjectInfo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ObjectInfo</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>